@@ -6,6 +6,7 @@ serd (1.1.1) unstable; urgency=medium
   * Remove support for reading Turtle named inline nodes extension
   * Remove useless character counting from API
   * Rename SerdChunk to SerdStringView
+  * Simplify statement flags
   * Simplify writer style options and write UTF-8 by default
   * Use char* for strings in public API
 
